--- a/help.html
+++ b/help.html
@@ -7,7 +7,8 @@
 	<meta name="format-detection" content="telephone=no">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="shortcut icon" href="img/logo.ico">
-	<meta name="Волонтерський Рух України" content="Ми – Волонтерський Рух України, займаємося закупівлею позашляховиків та мінібусів.">
+	<meta name="Волонтерський Рух України"
+		content="Ми – Волонтерський Рух України, займаємося закупівлею позашляховиків та мінібусів.">
 	<meta name="description" content="Ми – Волонтерський Рух України, у нас відкрито збір на авто для ЗСУ. Приєднуйтесь!">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -18,12 +19,14 @@
 		<header class="header-page">
 			<div class="header-page__box">
 				<div class="header__logo">
-					<div class="header__logo-img"><a href="index.html"><img src="img/logo.png" alt="Волонтерський Рух України"></a></div>
+					<div class="header__logo-img"><a href="index.html"><img src="img/logo.png"
+								alt="Волонтерський Рух України"></a></div>
 					<div class="header__logo-text" data-lang="home_page-logo">Волонтерський Рух України</div>
 				</div>
 				<ul class="header__nav">
 					<li class="header__nav-item"><a href="index.html#donat" data-lang="help_page-17">Підтримати</a></li>
-					<li class="header__nav-item avto"><a href="index.html#contact-form" data-lang="help_page-18">Запит на авто</a></li>
+					<li class="header__nav-item avto"><a href="index.html#contact-form" data-lang="help_page-18">Запит на авто</a>
+					</li>
 				</ul>
 				<div class="header-page__btns">
 					<button class="header__btns-btn header__btns-btn--active" data-btn="ukr" name="ukr">UA</button>
@@ -35,7 +38,8 @@
 
 			<section class="help">
 				<div class="help__box">
-					<button type="button" class="help__btn" onclick="window.history.back()"><span class="_icon-arrow-left"></span></button>
+					<button type="button" class="help__btn" onclick="window.history.back()"><span
+							class="_icon-arrow-left"></span></button>
 					<div class="help__content">
 						<div class="help__title title" data-lang="help_page-1">Часті запитання</div>
 						<div data-spollers class="help__items spollers">
@@ -44,9 +48,12 @@
 									<p data-lang="help_page-2">Кому допомагає фонд?</p><span class="_icon-arrowicon"></span>
 								</button>
 								<div class="spollers__body help__item-info">
-									<p class="help__item-text" data-lang="help_page-3">Фонд закуповує та передає авто військовим частинам ЗСУ. Також фонд забезпечує сервісний ремонт авто, що видає та надає
-										безкоштовний технічний супровід та ремонт для кожного переданого автомобіля на сервісних станціях наших партнерів Української Автомобільної Групи «АВТОКРАФТ».</p>
-									<a href="help.html#contact-form" class="help__item-link" data-lang="help_page-4">Подати запит на авто</a>
+									<p class="help__item-text" data-lang="help_page-3">Фонд закуповує та передає авто військовим частинам
+										ЗСУ. Також фонд забезпечує сервісний ремонт авто, що видає та надає
+										безкоштовний технічний супровід та ремонт для кожного переданого автомобіля на сервісних станціях
+										наших партнерів Української Автомобільної Групи «АВТОКРАФТ».</p>
+									<a href="help.html#contact-form" class="help__item-link" data-lang="help_page-4">Подати запит на
+										авто</a>
 								</div>
 							</div>
 
@@ -55,9 +62,11 @@
 									<p data-lang="help_page-5">Як отримати допомогу від фонду?</p><span class="_icon-arrowicon"></span>
 								</button>
 								<div class="spollers__body help__item-info">
-									<p class="help__item-text" data-lang="help_page-6">Для того щоб отримати автівку для військової частини, вам необхідно заповнити форму зворотнього зв’язку.
+									<p class="help__item-text" data-lang="help_page-6">Для того щоб отримати автівку для військової
+										частини, вам необхідно заповнити форму зворотнього зв’язку.
 										З вами зв’яжуться наші спеціалісти та опрацюють ваш запит</p>
-									<a href="help.html#contact-form" class="help__item-link" data-lang="help_page-7">Подати запит на авто</a>
+									<a href="help.html#contact-form" class="help__item-link" data-lang="help_page-7">Подати запит на
+										авто</a>
 								</div>
 							</div>
 
@@ -66,9 +75,12 @@
 									<p data-lang="help_page-8">Чому тільки авто?</p><span class="_icon-arrowicon"></span>
 								</button>
 								<div class="spollers__body help__item-info">
-									<p class="help__item-text" data-lang="help_page-9">Авто відіграють дуже важливу роль на фронті. Завдяки нашим партнерам сервісним центрам, ми не тільки закуповуємо автомобілі,
-										ми також проводимо ретельну перевірку їх технічного стану, виправляємо недоліки та перефарбовуємо. </p>
-									<p class="help__item-text" data-lang="help_page-10">Для кожного переданого ЗСУ автомобіля ми забезпечуємо безкоштовний технічний супровід та ремонт на сервісних станціях наших
+									<p class="help__item-text" data-lang="help_page-9">Авто відіграють дуже важливу роль на фронті.
+										Завдяки нашим партнерам сервісним центрам, ми не тільки закуповуємо автомобілі,
+										ми також проводимо ретельну перевірку їх технічного стану, виправляємо недоліки та перефарбовуємо.
+									</p>
+									<p class="help__item-text" data-lang="help_page-10">Для кожного переданого ЗСУ автомобіля ми
+										забезпечуємо безкоштовний технічний супровід та ремонт на сервісних станціях наших
 										партнерів Української Автомобільної Групи «АВТОКРАФТ».</p>
 									<a href="help.html#donat" class="help__item-link" data-lang="help_page-11">Підтримати</a>
 								</div>
@@ -79,10 +91,15 @@
 									<p data-lang="help_page-12">Які авто надає фонд?</p><span class="_icon-arrowicon"></span>
 								</button>
 								<div class="spollers__body help__item-info">
-									<p class="help__item-text" data-lang="help_page-13">Фонд закуповує позашляховики та мінібуси Hyundai. Наш партнер сервісний центр Hyundai у місті Дніпро видає автомобілі та забезпечує їх технічний супровід. </p>
-									<p class="help__item-text" data-lang="help_page-14">В подальшому за вашої підтримки, ми плануємо масшабуватись та задіювати сервісні центри наших партнерів у містах Черкаси та Кропівницький.
-										Так ми зможемо допомогти більшій кількості наших військових, забезпечивши іх автомобілями та безкоштовним технічним супровідом. </p>
-									<a href="help.html#contact-form" class="help__item-link" data-lang="help_page-15">Подати запит на авто</a>
+									<p class="help__item-text" data-lang="help_page-13">Фонд закуповує позашляховики та мінібуси Hyundai.
+										Наш партнер сервісний центр Hyundai у місті Дніпро видає автомобілі та забезпечує їх технічний
+										супровід. </p>
+									<p class="help__item-text" data-lang="help_page-14">В подальшому за вашої підтримки, ми плануємо
+										масшабуватись та задіювати сервісні центри наших партнерів у містах Черкаси та Кропівницький.
+										Так ми зможемо допомогти більшій кількості наших військових, забезпечивши іх автомобілями та
+										безкоштовним технічним супровідом. </p>
+									<a href="help.html#contact-form" class="help__item-link" data-lang="help_page-15">Подати запит на
+										авто</a>
 									<a href="help.html#donat" class="help__item-link" data-lang="help_page-16">Підтримати</a>
 								</div>
 							</div>
@@ -95,29 +112,38 @@
 				<div class="donat__box">
 					<h3 class="donat-title title" data-lang="home_page-46">Підтримати збір на авто для ЗСУ</h3>
 					<div class="donat__content">
-						
+
 						<div class="donat__btns">
-							<button type="button" class="tab__card-btn btn" name="card pay"><a href="https://payhub.com.ua/#/payment/movement-of-ukraine" data-lang="home_page-43" target="_blank">Переказ карткою</a><span class="_icon-arrowicon"></span></button>
-							<button type="button" class="tab__mono-btn btn" name="mono банка"><a href="https://send.monobank.ua/jar/6asNjXLZXx" data-lang="home_page-51" target="_blank">Mono банка</a><span class="_icon-arrowicon"></span></button>
+							<button type="button" class="tab__card-btn btn" name="card pay"><a
+									href="https://payhub.com.ua/#/payment/movement-of-ukraine" data-lang="home_page-43"
+									target="_blank">Переказ карткою</a><span class="_icon-arrowicon"></span></button>
+							<button type="button" class="tab__mono-btn btn" name="mono банка"><a
+									href="https://send.monobank.ua/jar/6asNjXLZXx" data-lang="home_page-51" target="_blank">Mono
+									банка</a><span class="_icon-arrowicon"></span></button>
 						</div>
 						<div class="tab__card invoice">
 							<div class="invoice-title" data-lang="home_page-54">Реквізити в Україні</div>
 							<ul class="invoice-list list">
-								<li class="list-item"><span class="list-item-title">Отримувач: </span>Благодійний фонд «Волонтерський Рух україни» </li>
-								<li class="list-item"><span class="list-item-title">Адреса отримувача: </span>Одеса 65039, пр.Гагаріна, 12а, офіс 110</li>
+								<li class="list-item"><span class="list-item-title">Отримувач: </span>Благодійний фонд «Волонтерський
+									Рух україни» </li>
+								<li class="list-item"><span class="list-item-title">Адреса отримувача: </span>Одеса 65039, пр.Гагаріна,
+									12а, офіс 110</li>
 								<li class="list-item"><span class="list-item-title">ЄДРПОУ: </span> 45019226</li>
 								<li class="list-item"><span class="list-item-title">IBAN UAH:</span></li>
 								<li class="list-item">
 									<span class="list-item-title bank">АТ КБ «ПРИВАТБАНК»</span>
-									<div class="list-item-text" ><span id="copy-text-one"> UA633052990000026005014933699</span><span class="_icon-copy" id="copy-one"></span></div>
+									<div class="list-item-text"><span id="copy-text-one"> UA633052990000026005014933699</span><span
+											class="_icon-copy" id="copy-one"></span></div>
 								</li>
 								<li class="list-item">
 									<span class="list-item-title bank">АТ «Універсал банк»</span>
-									<div class="list-item-text"><span id="copy-text-second">UA103220010000026004170000618 </span><span class="_icon-copy" id="copy-second"></span></div>
+									<div class="list-item-text"><span id="copy-text-second">UA103220010000026004170000618 </span><span
+											class="_icon-copy" id="copy-second"></span></div>
 								</li>
 								<li class="list-item">
 									<span class="list-item-title bank">АТ «ПУМБ»</span>
-									<div class="list-item-text"><span id="copy-text-third">UA873348510000000026000204673</span><span class="_icon-copy" id="copy-third"></span>
+									<div class="list-item-text"><span id="copy-text-third">UA873348510000000026000204673</span><span
+											class="_icon-copy" id="copy-third"></span>
 									</div>
 								</li>
 							</ul>
@@ -125,18 +151,22 @@
 						<div class="tab__card invoice">
 							<div class="invoice-title" data-lang="home_page-55">Перекази в іноземній валюті</div>
 							<ul class="invoice-list list">
-								<li class="list-item"><span class="list-item-title">Account holder: </span> CHARITABLE FUND "VOLUNTEER MOVEMENT OF UKRAINE" </li>
-								<li class="list-item"><span class="list-item-title">Account holder address: </span> 110 office,12А Gagarina avenue, Odesa, 65039, Ukraine</li>
+								<li class="list-item"><span class="list-item-title">Account holder: </span> CHARITABLE FUND "VOLUNTEER
+									MOVEMENT OF UKRAINE" </li>
+								<li class="list-item"><span class="list-item-title">Account holder address: </span> 110 office,12А
+									Gagarina avenue, Odesa, 65039, Ukraine</li>
 								<li class="list-item">
 									<span class="list-item-title">IBAN: </span>
-									<div class="list-item-text"> <span id="copy-text-fourth">UA443052990000026006034918626 </span><span class="_icon-copy" id="copy-fourth"></span></div>
+									<div class="list-item-text"> <span id="copy-text-fourth">UA443052990000026006034918626 </span><span
+											class="_icon-copy" id="copy-fourth"></span></div>
 								</li>
 								<li class="list-item"><span class="list-item-title">Bank name: </span>JSC CB "PRIVATBANK"</li>
-								<li class="list-item"><span class="list-item-title">Bank address: </span>1D HRUSHEVSKOHO STR., KYIV, 01001, UKRAINE</li>
+								<li class="list-item"><span class="list-item-title">Bank address: </span>1D HRUSHEVSKOHO STR., KYIV,
+									01001, UKRAINE</li>
 								<li class="list-item"><span class="list-item-title">SWIFT: </span>PBANUA2X</li>
 							</ul>
-						</div>			
-					</div>		
+						</div>
+					</div>
 				</div>
 			</section>
 
@@ -146,28 +176,39 @@
 					<div class="contact-form__title" data-lang="home_page-56">Заповнюйте форму і ми з вами зв’яжемось</div>
 					<div class="contact-form__content">
 						<div class="contact-form__item contact-item form__group">
-							<label for="contact-item__name" class="tab__card-label contact-item__label" data-lang="home_page-57">Ім’я</label>
-							<input required type="text" placeholder="Перемога" class="contact-item__input input input js-input" name="name" id="contact__name">
+							<label for="contact-item__name" class="tab__card-label contact-item__label"
+								data-lang="home_page-57">Ім’я</label>
+							<input required type="text" placeholder="Перемога" class="contact-item__input input input js-input"
+								name="name" id="contact__name">
 						</div>
 						<div class="contact-form__item contact-item form__group">
-							<label for="contact-item__tel" class="tab__card-label contact-item__label" data-lang="home_page-58">Номер телефону</label>
-							<input required type="tel" placeholder="+38 067 111 11 11" class="contact-item__input input input js-input js-input-phone" name="tel" id="contact__tel">
+							<label for="contact-item__tel" class="tab__card-label contact-item__label" data-lang="home_page-58">Номер
+								телефону</label>
+							<input required type="tel" placeholder="+38 067 111 11 11"
+								class="contact-item__input input input js-input js-input-phone" name="tel" id="contact__tel">
 						</div>
 						<div class="contact-form__item contact-item form__group">
 							<label for="contact-item__email" class="tab__card-label contact-item__label">Email</label>
-							<input required type="email" placeholder="peremoga@gmail.com" class="contact-item__input input input js-input js-input-email" name="email" id="contact__email">
+							<input required type="email" placeholder="peremoga@gmail.com"
+								class="contact-item__input input input js-input js-input-email" name="email" id="contact__email">
 						</div>
 					</div>
-					<button type="submit" class="contact-form__btn" data-modal data-lang="home_page-59" name="donat">Надіслати</button>
+					<button type="submit" class="contact-form__btn" data-modal data-lang="home_page-59"
+						name="donat">Надіслати</button>
 				</form>
 			</section>
 		</main>
 		<footer class="footer">
 			<div class="footer__box">
-				
+
 				<div class="footer__content">
 					<div class="footer__logo">
-						<div class="footer__logo-img"><a href="index.html"><picture><source srcset="img/logo1.webp" type="image/webp"><img src="img/logo1.png" alt="логотип Волонтерський Рух України"></picture></a></div>
+						<div class="footer__logo-img"><a href="index.html">
+								<picture>
+									<source srcset="img/logo1.webp" type="image/webp"><img src="img/logo1.png"
+										alt="логотип Волонтерський Рух України">
+								</picture>
+							</a></div>
 						<div class="footer__logo-text" data-lang="footer_page-logo">Волонтерський Рух України</div>
 					</div>
 					<div class="footer__lists">
@@ -186,7 +227,8 @@
 						<button class="footer__btns-btn" data-btn="en">EN</button>
 					</div>
 				</div>
-				<button class="footer__btn-main btn" name="donat"><a data-lang="home_page-67" href="index.html#donat">Підтримати</a><span class="_icon-arrowicon"></span></button>
+				<button class="footer__btn-main btn" name="donat"><a data-lang="home_page-67"
+						href="index.html#donat">Підтримати</a><span class="_icon-arrowicon"></span></button>
 			</div>
 		</footer>
 	</div>
@@ -200,13 +242,16 @@
 			<button data-close type="button" class="modal__close">&times;</button>
 			<!---<div data-close class="modal__close">&times;</div>--->
 			<div class="modal__text">
-				<p data-lang="home_page-68">Дякуємо, що залишили запит на нашому сайті. Очікуйте, найближчим часом з вами зв’яжуться.</p>
+				<p data-lang="home_page-68">Дякуємо, що залишили запит на нашому сайті. Очікуйте, найближчим часом з вами
+					зв’яжуться.</p>
 				<p data-lang="home_page-69">Все буде Україна!</p>
 			</div>
-			<button data-close type="button" class="modal__btn btn-blue"><a href="index.html#donat" data-lang="home_page-70">Підтримати збір</a><span class="_icon-arrowicon"></span></button>
+			<button data-close type="button" class="modal__btn btn-blue"><a href="index.html#donat"
+					data-lang="home_page-70">Підтримати збір</a><span class="_icon-arrowicon"></span></button>
 		</div>
 	</div>
 	<script src="js/app.js"></script>
+	<script src="js/form.js"></script>
 
 </body>
 
