--- a/partners.html
+++ b/partners.html
@@ -7,7 +7,8 @@
 	<meta name="format-detection" content="telephone=no">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="shortcut icon" href="img/logo.ico">
-	<meta name="Волонтерський Рух України" content="Ми – Волонтерський Рух України, займаємося закупівлею позашляховиків та мінібусів.">
+	<meta name="Волонтерський Рух України"
+		content="Ми – Волонтерський Рух України, займаємося закупівлею позашляховиків та мінібусів.">
 	<meta name="description" content="Ми – Волонтерський Рух України, у нас відкрито збір на авто для ЗСУ. Приєднуйтесь!">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -18,12 +19,14 @@
 		<header class="header-page">
 			<div class="header-page__box">
 				<div class="header__logo">
-					<div class="header__logo-img"><a href="index.html"><img src="img/logo.png" alt="Волонтерський Рух України"></a></div>
+					<div class="header__logo-img"><a href="index.html"><img src="img/logo.png"
+								alt="Волонтерський Рух України"></a></div>
 					<div class="header__logo-text" data-lang="home_page-logo">Волонтерський Рух України</div>
 				</div>
 				<ul class="header__nav">
 					<li class="header__nav-item"><a href="index.html#donat" data-lang="help_page-17">Підтримати</a></li>
-					<li class="header__nav-item avto"><a href="index.html#contact-form" data-lang="help_page-18">Запит на авто</a></li>
+					<li class="header__nav-item avto"><a href="index.html#contact-form" data-lang="help_page-18">Запит на авто</a>
+					</li>
 				</ul>
 				<div class="header-page__btns">
 					<button class="header__btns-btn header__btns-btn--active" data-btn="ukr" name="ukr">UA</button>
@@ -35,7 +38,8 @@
 
 			<section class="partner">
 				<div class="partner__box">
-					<button type="button" class="partner__btn" name="partner" onclick="window.history.back()"><span class="_icon-arrow-left"></span></span></button>
+					<button type="button" class="partner__btn" name="partner" onclick="window.history.back()"><span
+							class="_icon-arrow-left"></span></span></button>
 					<div class="partner__content">
 						<div class="partner__title title" data-lang="partners_page-1">Наші партнери</div>
 						<div class="partner__items">
@@ -45,7 +49,8 @@
 									<span class="_icon-arrowicon"></span>
 								</div>
 								<div class="partner__item-info">
-									<div class="partner__item-work"><a href="https://hyundai-dnipro.com/" data-lang="partners_page-2" target="_blank">Посилання на сайт</a></div>
+									<div class="partner__item-work"><a href="https://hyundai-dnipro.com/" data-lang="partners_page-2"
+											target="_blank">Посилання на сайт</a></div>
 									<div>
 										<p class="partner__item-place" data-lang="partners_page-3">Дніпро, Україна</p>
 										<p class="partner__item-street" data-lang="partners_page-4">Запорізьке шосе, 59</p>
@@ -54,10 +59,12 @@
 							</div>
 							<div class="partner__items-item vacancy__item">
 								<div class="partner__item-title">
-									<p class="partner__item-renault"><a href="https://renault.kr.ua" target="_blank">Renault</a></p> <span class="_icon-arrowicon"></span>
+									<p class="partner__item-renault"><a href="https://renault.kr.ua" target="_blank">Renault</a></p> <span
+										class="_icon-arrowicon"></span>
 								</div>
 								<div class="partner__item-info">
-									<div class="partner__item-work"><a href="https://renault.kr.ua" data-lang="partners_page-5" target="_blank">Посилання на сайт</a></div>
+									<div class="partner__item-work"><a href="https://renault.kr.ua" data-lang="partners_page-5"
+											target="_blank">Посилання на сайт</a></div>
 									<div>
 										<p class="partner__item-place" data-lang="partners_page-6">Кропивницький, Україна</p>
 										<p class="partner__item-street" data-lang="partners_page-7">вул. Вокзальна, 60-А</p>
@@ -66,10 +73,12 @@
 							</div>
 							<div class="partner__items-item vacancy__item">
 								<div class="partner__item-title">
-									<p class="partner__item-renault"><a href="https://renault.ck.ua" target="_blank">Renault</a></p><span class="_icon-arrowicon"></span>
+									<p class="partner__item-renault"><a href="https://renault.ck.ua" target="_blank">Renault</a></p><span
+										class="_icon-arrowicon"></span>
 								</div>
 								<div class="partner__item-info">
-									<div class="partner__item-work"><a href="https://renault.ck.ua" data-lang="partners_page-8" target="_blank">Посилання на сайт</a></div>
+									<div class="partner__item-work"><a href="https://renault.ck.ua" data-lang="partners_page-8"
+											target="_blank">Посилання на сайт</a></div>
 									<div>
 										<p class="partner__item-place" data-lang="partners_page-9">Черкаси, Україна</p>
 										<p class="partner__item-street" data-lang="partners_page-10">вул. 30 років Перемоги, 7/2</p>
@@ -78,10 +87,12 @@
 							</div>
 							<div class="partner__items-item vacancy__item">
 								<div class="partner__item-title">
-									<p class="partner__item-nissan"><a href="https://nissan.kr.ua" target="_blank">Nissan</a></p><span class="_icon-arrowicon"></span>
+									<p class="partner__item-nissan"><a href="https://nissan.kr.ua" target="_blank">Nissan</a></p><span
+										class="_icon-arrowicon"></span>
 								</div>
 								<div class="partner__item-info">
-									<div class="partner__item-work"><a href="https://nissan.kr.ua" data-lang="partners_page-11" target="_blank">Посилання на сайт</a></div>
+									<div class="partner__item-work"><a href="https://nissan.kr.ua" data-lang="partners_page-11"
+											target="_blank">Посилання на сайт</a></div>
 									<div>
 										<p class="partner__item-place" data-lang="partners_page-12">Кропивницький, Україна</p>
 										<p class="partner__item-street" data-lang="partners_page-13">пр-т Винниченка, 2</p>
@@ -90,10 +101,12 @@
 							</div>
 							<div class="partner__items-item vacancy__item">
 								<div class="partner__item-title">
-									<p class="partner__item-nissan"><a href="https://nissan.ck.ua" target="_blank">Nissan</a></p><span class="_icon-arrowicon"></span>
+									<p class="partner__item-nissan"><a href="https://nissan.ck.ua" target="_blank">Nissan</a></p><span
+										class="_icon-arrowicon"></span>
 								</div>
 								<div class="partner__item-info">
-									<div class="partner__item-work"><a href="https://nissan.ck.ua" data-lang="partners_page-14" target="_blank">Посилання на сайт</a></div>
+									<div class="partner__item-work"><a href="https://nissan.ck.ua" data-lang="partners_page-14"
+											target="_blank">Посилання на сайт</a></div>
 									<div>
 										<p class="partner__item-place" data-lang="partners_page-15">Черкаси, Україна</p>
 										<p class="partner__item-street" data-lang="partners_page-16">вул. 30 років Перемоги, 7/2</p>
@@ -102,10 +115,12 @@
 							</div>
 							<div class="partner__items-item vacancy__item">
 								<div class="partner__item-title">
-									<p class="partner__item-ford"><a href="https://ford.kr.ua" target="_blank">Ford</a></p><span class="_icon-arrowicon"></span>
+									<p class="partner__item-ford"><a href="https://ford.kr.ua" target="_blank">Ford</a></p><span
+										class="_icon-arrowicon"></span>
 								</div>
 								<div class="partner__item-info">
-									<div class="partner__item-work"><a href="https://ford.kr.ua" data-lang="partners_page-17" target="_blank">Посилання на сайт</a></div>
+									<div class="partner__item-work"><a href="https://ford.kr.ua" data-lang="partners_page-17"
+											target="_blank">Посилання на сайт</a></div>
 									<div>
 										<p class="partner__item-place" data-lang="partners_page-18">Кропивницький, Україна </p>
 										<p class="partner__item-street" data-lang="partners_page-19">пр-т Винниченка, 2</p>
@@ -114,10 +129,12 @@
 							</div>
 							<div class="partner__items-item vacancy__item">
 								<div class="partner__item-title">
-									<p class="partner__item-skoda"><a href="https://skoda.ck.ua" target="_blank">Skoda</a></p><span class="_icon-arrowicon"></span>
+									<p class="partner__item-skoda"><a href="https://skoda.ck.ua" target="_blank">Skoda</a></p><span
+										class="_icon-arrowicon"></span>
 								</div>
 								<div class="partner__item-info">
-									<div class="partner__item-work"><a href="https://skoda.ck.ua" data-lang="partners_page-20" target="_blank">Посилання на сайт</a></div>
+									<div class="partner__item-work"><a href="https://skoda.ck.ua" data-lang="partners_page-20"
+											target="_blank">Посилання на сайт</a></div>
 									<div>
 										<p class="partner__item-place" data-lang="partners_page-21">Черкаси, Україна</p>
 										<p class="partner__item-street" data-lang="partners_page-22">вул. Чигиринська, 60/2</p>
@@ -134,29 +151,38 @@
 				<div class="donat__box">
 					<h3 class="donat-title title" data-lang="home_page-46">Підтримати збір на авто для ЗСУ</h3>
 					<div class="donat__content">
-						
+
 						<div class="donat__btns">
-							<button type="button" class="tab__card-btn btn" name="card pay"><a href="https://payhub.com.ua/#/payment/movement-of-ukraine" data-lang="home_page-43" target="_blank">Переказ карткою</a><span class="_icon-arrowicon"></span></button>
-							<button type="button" class="tab__mono-btn btn" name="mono банка"><a href="https://send.monobank.ua/jar/6asNjXLZXx" data-lang="home_page-51" target="_blank">Mono банка</a><span class="_icon-arrowicon"></span></button>
+							<button type="button" class="tab__card-btn btn" name="card pay"><a
+									href="https://payhub.com.ua/#/payment/movement-of-ukraine" data-lang="home_page-43"
+									target="_blank">Переказ карткою</a><span class="_icon-arrowicon"></span></button>
+							<button type="button" class="tab__mono-btn btn" name="mono банка"><a
+									href="https://send.monobank.ua/jar/6asNjXLZXx" data-lang="home_page-51" target="_blank">Mono
+									банка</a><span class="_icon-arrowicon"></span></button>
 						</div>
 						<div class="tab__card invoice">
 							<div class="invoice-title" data-lang="home_page-54">Реквізити в Україні</div>
 							<ul class="invoice-list list">
-								<li class="list-item"><span class="list-item-title">Отримувач: </span>Благодійний фонд «Волонтерський Рух україни» </li>
-								<li class="list-item"><span class="list-item-title">Адреса отримувача: </span>Одеса 65039, пр.Гагаріна, 12а, офіс 110</li>
+								<li class="list-item"><span class="list-item-title">Отримувач: </span>Благодійний фонд «Волонтерський
+									Рух україни» </li>
+								<li class="list-item"><span class="list-item-title">Адреса отримувача: </span>Одеса 65039, пр.Гагаріна,
+									12а, офіс 110</li>
 								<li class="list-item"><span class="list-item-title">ЄДРПОУ: </span> 45019226</li>
 								<li class="list-item"><span class="list-item-title">IBAN UAH:</span></li>
 								<li class="list-item">
 									<span class="list-item-title bank">АТ КБ «ПРИВАТБАНК»</span>
-									<div class="list-item-text" ><span id="copy-text-one"> UA633052990000026005014933699</span><span class="_icon-copy" id="copy-one"></span></div>
+									<div class="list-item-text"><span id="copy-text-one"> UA633052990000026005014933699</span><span
+											class="_icon-copy" id="copy-one"></span></div>
 								</li>
 								<li class="list-item">
 									<span class="list-item-title bank">АТ «Універсал банк»</span>
-									<div class="list-item-text"><span id="copy-text-second">UA103220010000026004170000618 </span><span class="_icon-copy" id="copy-second"></span></div>
+									<div class="list-item-text"><span id="copy-text-second">UA103220010000026004170000618 </span><span
+											class="_icon-copy" id="copy-second"></span></div>
 								</li>
 								<li class="list-item">
 									<span class="list-item-title bank">АТ «ПУМБ»</span>
-									<div class="list-item-text"><span id="copy-text-third">UA873348510000000026000204673</span><span class="_icon-copy" id="copy-third"></span>
+									<div class="list-item-text"><span id="copy-text-third">UA873348510000000026000204673</span><span
+											class="_icon-copy" id="copy-third"></span>
 									</div>
 								</li>
 							</ul>
@@ -164,18 +190,22 @@
 						<div class="tab__card invoice">
 							<div class="invoice-title" data-lang="home_page-55">Перекази в іноземній валюті</div>
 							<ul class="invoice-list list">
-								<li class="list-item"><span class="list-item-title">Account holder: </span> CHARITABLE FUND "VOLUNTEER MOVEMENT OF UKRAINE" </li>
-								<li class="list-item"><span class="list-item-title">Account holder address: </span> 110 office,12А Gagarina avenue, Odesa, 65039, Ukraine</li>
+								<li class="list-item"><span class="list-item-title">Account holder: </span> CHARITABLE FUND "VOLUNTEER
+									MOVEMENT OF UKRAINE" </li>
+								<li class="list-item"><span class="list-item-title">Account holder address: </span> 110 office,12А
+									Gagarina avenue, Odesa, 65039, Ukraine</li>
 								<li class="list-item">
 									<span class="list-item-title">IBAN: </span>
-									<div class="list-item-text"> <span id="copy-text-fourth">UA443052990000026006034918626 </span><span class="_icon-copy" id="copy-fourth"></span></div>
+									<div class="list-item-text"> <span id="copy-text-fourth">UA443052990000026006034918626 </span><span
+											class="_icon-copy" id="copy-fourth"></span></div>
 								</li>
 								<li class="list-item"><span class="list-item-title">Bank name: </span>JSC CB "PRIVATBANK"</li>
-								<li class="list-item"><span class="list-item-title">Bank address: </span>1D HRUSHEVSKOHO STR., KYIV, 01001, UKRAINE</li>
+								<li class="list-item"><span class="list-item-title">Bank address: </span>1D HRUSHEVSKOHO STR., KYIV,
+									01001, UKRAINE</li>
 								<li class="list-item"><span class="list-item-title">SWIFT: </span>PBANUA2X</li>
 							</ul>
-						</div>			
-					</div>		
+						</div>
+					</div>
 				</div>
 			</section>
 
@@ -185,29 +215,40 @@
 					<div class="contact-form__title" data-lang="home_page-56">Заповнюйте форму і ми з вами зв’яжемось</div>
 					<div class="contact-form__content">
 						<div class="contact-form__item contact-item form__group">
-							<label for="contact-item__name" class="tab__card-label contact-item__label" data-lang="home_page-57">Ім’я</label>
-							<input required type="text" placeholder="Перемога" class="contact-item__input input input js-input" name="name" id="contact__name">
+							<label for="contact-item__name" class="tab__card-label contact-item__label"
+								data-lang="home_page-57">Ім’я</label>
+							<input required type="text" placeholder="Перемога" class="contact-item__input input input js-input"
+								name="name" id="contact__name">
 						</div>
 						<div class="contact-form__item contact-item form__group">
-							<label for="contact-item__tel" class="tab__card-label contact-item__label" data-lang="home_page-58">Номер телефону</label>
-							<input required type="tel" placeholder="+38 067 111 11 11" class="contact-item__input input input js-input js-input-phone" name="tel" id="contact__tel">
+							<label for="contact-item__tel" class="tab__card-label contact-item__label" data-lang="home_page-58">Номер
+								телефону</label>
+							<input required type="tel" placeholder="+38 067 111 11 11"
+								class="contact-item__input input input js-input js-input-phone" name="tel" id="contact__tel">
 						</div>
 						<div class="contact-form__item contact-item form__group">
 							<label for="contact-item__email" class="tab__card-label contact-item__label">Email</label>
-							<input required type="email" placeholder="peremoga@gmail.com" class="contact-item__input input input js-input js-input-email" name="email" id="contact__email">
+							<input required type="email" placeholder="peremoga@gmail.com"
+								class="contact-item__input input input js-input js-input-email" name="email" id="contact__email">
 						</div>
 					</div>
-					<button type="submit" class="contact-form__btn" data-modal data-lang="home_page-59" name="donat">Надіслати</button>
+					<button type="submit" class="contact-form__btn" data-modal data-lang="home_page-59"
+						name="donat">Надіслати</button>
 				</form>
 			</section>
 		</main>
 
 		<footer class="footer">
 			<div class="footer__box">
-				
+
 				<div class="footer__content">
 					<div class="footer__logo">
-						<div class="footer__logo-img"><a href="index.html"><picture><source srcset="img/logo1.webp" type="image/webp"><img src="img/logo1.png" alt="логотип Волонтерський Рух України"></picture></a></div>
+						<div class="footer__logo-img"><a href="index.html">
+								<picture>
+									<source srcset="img/logo1.webp" type="image/webp"><img src="img/logo1.png"
+										alt="логотип Волонтерський Рух України">
+								</picture>
+							</a></div>
 						<div class="footer__logo-text" data-lang="footer_page-logo">Волонтерський Рух України</div>
 					</div>
 					<div class="footer__lists">
@@ -226,7 +267,8 @@
 						<button class="footer__btns-btn" data-btn="en" name="en">EN</button>
 					</div>
 				</div>
-				<button class="footer__btn-main btn" name="donat"><a data-lang="home_page-67" href="index.html#donat">Підтримати</a><span class="_icon-arrowicon"></span></button>
+				<button class="footer__btn-main btn" name="donat"><a data-lang="home_page-67"
+						href="index.html#donat">Підтримати</a><span class="_icon-arrowicon"></span></button>
 			</div>
 		</footer>
 	</div>
@@ -236,16 +278,19 @@
 	<div class="modal">
 		<div class="modal__wrapper">
 			<button data-close type="button" class="modal__close" name="close">&times;</button>
-			
+
 			<div class="modal__text">
-				<p data-lang="home_page-68">Дякуємо, що залишили запит на нашому сайті. Очікуйте, найближчим часом з вами зв’яжуться.</p>
+				<p data-lang="home_page-68">Дякуємо, що залишили запит на нашому сайті. Очікуйте, найближчим часом з вами
+					зв’яжуться.</p>
 				<p data-lang="home_page-69">Все буде Україна!</p>
 			</div>
-			<button data-close type="button" class="modal__btn btn-blue" name="donat"><a href="index.html#donat" data-lang="home_page-70">Підтримати збір</a><span class="_icon-arrowicon"></span></button>
+			<button data-close type="button" class="modal__btn btn-blue" name="donat"><a href="index.html#donat"
+					data-lang="home_page-70">Підтримати збір</a><span class="_icon-arrowicon"></span></button>
 		</div>
 	</div>
 
 	<script src="js/app.js"></script>
+	<script src="js/form.js"></script>
 
 </body>
 
